added folder structure and added contact and gallery sec css for desktop and laptop

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="index_styles/index.css">
 </head>
 <body>
+    <!--Header section--->
+    <!--Hero section----->
+    <!--Who we are section---->
+    <!--Why choose us section---->
+    <!--our blogs and videos section---->
+    <!--gallary section---->
+    <!--testmonial section---->
+    <!--footer section---->
     
 </body>
 </html>
