--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <!--gallary section---->
     <!--testmonial section---->
     <!--footer section---->
-    
+    <script src="js-files/common.js"></script>
 </body>
 </html>
