--- a/pages/about.html
+++ b/pages/about.html
@@ -1,16 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RBF - Palakkad and kerala best interblocks company</title>
-    <link rel="stylesheet" href="about.html">
-</head>
-<body>
-    <!--Header section-->
-    <!--Hero section-->
+    <link rel="stylesheet" href="../styles/about-styles/about.css" />
+  </head>
+  <body>
+    <main class="wrapper-section">
+      <div class="bg-layer">
+        <!--header section-->
+        <header class="header-section">
+          <div class="container">
+            <div class="logo">
+              <a href="../index.html"> RBF </a>
+              <span> enterprise </span>
+            </div>
+            <img
+              class="handBurger"
+              src="../images/nav-bar/hambBurgerMenu 1.svg"
+              alt="nav-bar svg"
+            />
+            <ul class="nav-links">
+              <li><a href="../index.html">HOME</a></li>
+              <li class="active"><a href="/pages/about.html">ABOUT</a></li>
+              <li><a href="/pages/gallary.html">GALLERY</a></li>
+              <li><a href="/pages/contact.html">CONTACT</a></li>
+            </ul>
+          </div>
+        </header>
+        <!--Hero section-->
+        <section class="hero-section">
+          <div class="container">
+            <div class="flex-wrapper">
+              <h1>ABOUT<span> US </span></h1>
+              <h2>
+                RBF's interlocking blocks are the best in the interblock
+                business in palakkad , kerala and most reliable, durable and
+                safe solution for modern day construction.
+              </h2>
+              <a href="../pages/gallary.html" class="btn">
+                CONTACT US FOR BOOKING
+              </a>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
     <!--main-content section-->
+    <section class="main-section">
+      <div class="container">
+        <div class="top">
+          <div class="left">
+            <h1>ABOUT OUR <span>COMPANY</span></h1>
+            <h2>
+              We are a Professional Interlocking Brick Company since 2003
+              proudly offers our services to clients throughout palakkad and
+              kerala.
+            </h2>
+            <h3>
+              RBF Enterprise have now satisfied over a thousand of clients in
+              the making of houses, schools, hospitals and complexes. Great
+              Service begins and ends with experienced and friendly
+              professionals, which is why we put so much consideration into
+              selecting the best people to join our team.We aim to not only meet
+              your needs but also to exceed your expectation of what a
+              dependable Interlocking Brick Company can be.
+            </h3>
+            <a href="gallary.html" class="btn">GALLERY</a>
+          </div>
+          <div class="right">
+            <img
+              src="../images/about/our-company-image.jpg"
+              alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+            />
+          </div>
+        </div>
+        <div class="bottom">
+          <div class="left">
+            <img
+            class="ceo-image"
+              src="../images/about/ceo-of-rbf-palakkad.jpeg"
+              alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+            />
+          </div>
+          <div class="right">
+            <h1>CEO OF OUR<span> COMPANY</span></h1>
+            <h2>
+              RBF Enterprise have now satisfied over a thousand of clients in
+              the making of houses, schools, hospitals and complexes. Great
+              Service begins and ends with experienced and friendly
+              professionals, which is why we put so much consideration into
+              selecting the best people to join our team.We aim to not only meet
+              your needs but also to exceed your expectation of what a
+              dependable Interlocking Brick Company can be.
+            </h2>
+            <h2>WANT TO CONTACT OUR CEO ?</h2>
+            <div class="social-links">
+              <a href="#">
+                <img
+                  src="../images/Footer/email.svg"
+                  alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+                />
+              </a>
+              <a href="#">
+                <img
+                  src="../images/Footer/fb.svg"
+                  alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+                />
+              </a>
+              <a href="#">
+                <img
+                  src="../images/Footer/instagram.svg"
+                  alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+                />
+              </a>
+              <a href="#">
+                <img
+                  src="../images/Footer/whatsapp.svg"
+                  alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+                />
+              </a>
+              <a href="#">
+                <img
+                  src="../images/Footer/yt.svg"
+                  alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--footer section-->
-</body>
+    <footer class="footer">
+      <div class="container">
+        <div class="top">
+          <ul class="nav-links">
+            <li><a href="../index.html">HOME</a></li>
+            <li><a href="/pages/about.html">ABOUT</a></li>
+            <li class="active"><a href="/pages/gallary.html">GALLERY</a></li>
+            <li><a href="/pages/contact.html">CONTACT</a></li>
+          </ul>
+          <div class="logo">
+            <a href="../index.html"> RBF </a>
+            <span> enterprise </span>
+          </div>
+          <div class="social-links">
+            <a href="#">
+              <img
+                src="../images/Footer/email.svg"
+                alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+              />
+            </a>
+            <a href="#">
+              <img
+                src="../images/Footer/fb.svg"
+                alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+              />
+            </a>
+            <a href="#">
+              <img
+                src="../images/Footer/instagram.svg"
+                alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+              />
+            </a>
+            <a href="#">
+              <img
+                src="../images/Footer/whatsapp.svg"
+                alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+              />
+            </a>
+            <a href="#">
+              <img
+                src="../images/Footer/yt.svg"
+                alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+              />
+            </a>
+          </div>
+        </div>
+        <div class="bottom">
+          <div class="wrapper">
+            <div class="card">
+              <img
+                class="special-image"
+                src="../images/Footer/bottom/email.svg"
+                alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+              />
+              <a target="_blank" href="#"> gmail@gmail.com </a>
+            </div>
+            <div class="card">
+              <img
+                class="special-image"
+                src="../images/Footer/bottom/location.svg"
+                alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+              />
+              <a target="_blank" href="https://goo.gl/maps/yMnxC7G6reUnFdjT8">
+                Chathamangalam , palakkad,kerala
+              </a>
+            </div>
+            <div class="card">
+              <img
+                src="../images/Footer/bottom/phone.svg"
+                alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+              />
+              <a href="tel:9846165549" target="_blank"> +91 9846165549</a>
+              <a href="tel:9846165549" target="_blank"> +91 9846165549</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="../js-files/common.js"></script>
+  </body>
 </html>
