--- a/pages/gallary.html
+++ b/pages/gallary.html
@@ -137,33 +137,43 @@
             <span> enterprise </span>
           </div>
           <div class="social-links">
-            <img
-              src="../images/Footer/email.svg"
-              alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
-            />
-            <img
-              src="../images/Footer/fb.svg"
-              alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
-            />
-            <img
-              src="../images/Footer/instagram.svg"
-              alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
-            />
-            <img
-              src="../images/Footer/whatsapp.svg"
-              alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
-            />
-            <img
-              src="../images/Footer/yt.svg"
-              alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
-            />
+            <a href="#">
+              <img
+                src="../images/Footer/email.svg"
+                alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+              />
+            </a>
+            <a href="#">
+              <img
+                src="../images/Footer/fb.svg"
+                alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+              />
+            </a>
+            <a href="#">
+              <img
+                src="../images/Footer/instagram.svg"
+                alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+              />
+            </a>
+            <a href="#">
+              <img
+                src="../images/Footer/whatsapp.svg"
+                alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+              />
+            </a>
+            <a href="#">
+              <img
+                src="../images/Footer/yt.svg"
+                alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+              />
+            </a>
           </div>
         </div>
         <div class="bottom">
           <div class="wrapper">
             <div class="card">
               <img
-              class="special-image"
+                class="special-image"
                 src="../images/Footer/bottom/email.svg"
                 alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
               />
@@ -171,25 +181,26 @@
             </div>
             <div class="card">
               <img
-              class="special-image"
+                class="special-image"
                 src="../images/Footer/bottom/location.svg"
                 alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
               />
-              <a target="_blank" href="https://goo.gl/maps/yMnxC7G6reUnFdjT8"> Chathamangalam , palakkad,kerala </a>
+              <a target="_blank" href="https://goo.gl/maps/yMnxC7G6reUnFdjT8">
+                Chathamangalam , palakkad,kerala
+              </a>
             </div>
             <div class="card">
               <img
-               
                 src="../images/Footer/bottom/phone.svg"
                 alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
               />
               <a href="tel:9846165549" target="_blank"> +91 9846165549</a>
               <a href="tel:9846165549" target="_blank"> +91 9846165549</a>
-              
             </div>
           </div>
         </div>
       </div>
     </footer>
+    <script src="../js-files/common.js"></script>
   </body>
 </html>
