--- a/index.html
+++ b/index.html
@@ -1,21 +1,338 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RBF - Palakkad and kerala best interblocks company</title>
-    <link rel="stylesheet" href="index_styles/index.css">
-</head>
-<body>
-    <!--Header section--->
-    <!--Hero section----->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+    />
+    <link rel="stylesheet" href="index_styles/index.css" />
+  </head>
+  <body>
+    <main class="wrapper-section">
+      <div class="bg-layer">
+        <!--header section-->
+        <header class="header-section">
+          <div class="container">
+            <div class="logo">
+              <a href="../index.html"> RBF </a>
+              <span> enterprise </span>
+            </div>
+            <img
+              class="handBurger"
+              src="../images/nav-bar/hambBurgerMenu 1.svg"
+              alt="nav-bar svg"
+            />
+            <ul class="nav-links">
+              <li class="active"><a href="../index.html">HOME</a></li>
+              <li><a href="/pages/about.html">ABOUT</a></li>
+              <li><a href="/pages/gallary.html">GALLERY</a></li>
+              <li><a href="/pages/contact.html">CONTACT</a></li>
+            </ul>
+          </div>
+        </header>
+        <!--Hero section-->
+        <section class="hero-section">
+          <div class="container">
+            <div class="flex-wrapper">
+              <h1>WE ARE<span> ONE</span></h1>
+              <h2>
+                of the best and trusted inter blocks manufacturer and Pavers in
+                palakkad kerala since 1920
+              </h2>
+              <a href="../pages/gallary.html" class="btn">
+                CONTACT US FOR BOOKING
+              </a>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
     <!--Who we are section---->
+    <section class="who-we-are-section">
+      <div class="container">
+        <h1 class="title">who we are</h1>
+        <h2>
+          We are one of the leading inter-blocks manufacturers located at
+          chathamangalam,palakkad, Kerala, South India. Our blocks are made from
+          high quality machines.
+        </h2>
+        <div class="btn-wrapper">
+          <a href="./pages/about.html">ABOUT</a>
+          <a href="./pages/gallary.html">GALLERY</a>
+        </div>
+        <div class="timeline">
+          <h6>2002</h6>
+          <div class="img-wrapper">
+            <img
+              src="images/landing-page/arrow.svg"
+              alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+            />
+            <p>established</p>
+          </div>
+          <h6>CURRENT</h6>
+        </div>
+      </div>
+    </section>
     <!--Why choose us section---->
+    <section class="why-choose-us">
+      <div class="container">
+        <h1 class="title">Why choose us</h1>
+        <div class="card-wrapper">
+          <div class="card">
+            <div class="container">
+              <img
+                src="images/landing-page/card/quality.svg"
+                alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+              />
+              <h2>High Quality</h2>
+              <p>
+                At RBF our quality is our identity. Our experience, precision
+                engineering and our standards of mixing and training of our
+                staffs and associates help to develop blocks that can stand the
+                test of time and assure peace of mind for our clients. Our
+                values and pursuit for excellence ensure we consistently deliver
+                the best products for our clients.
+              </p>
+              <a href="./pages/contact.html">CONTACT</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="container">
+              <img
+                src="./images/landing-page/card/money.svg"
+                alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+              />
+              <h2>Value for Money</h2>
+              <p>
+                RBF blocks are manufactured with end user in mind, this ensures
+                that in comparison to quality traditional brick work or block
+                work, our blocks deliver more value for money on a per square
+                feet value of construction. RBF’s easy to deploy blocks saves
+                direct cost by reducing the cement, water consumption,
+                construction time and optimizes labor cost of construction
+                through easy to build stackable design.
+              </p>
+              <a href="./pages/contact.html">CONTACT</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="container">
+              <img
+                src="./images/landing-page/card/sustaniable 1.svg"
+                alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+              />
+              <h2>Sustainable</h2>
+              <p>
+                We use less water and ensure our manufacturing processes do not
+                put undue pressure on our planet. Our bricks are engineered to
+                last a lifetime and can be effectively re-used by carefully
+                unstacking them during decommissioning of a construction. RBF’s
+                also believes in entrepreneurship and strives to create job
+                opportunities in this domain through our business partnership
+                engagements.
+              </p>
+              <a href="./pages/contact.html">CONTACT</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--our blogs and videos section---->
     <!--gallary section---->
+    <section class="gallery-section">
+      <div class="container">
+        <h1 class="title">Gallery</h1>
+        <div class="img-wrapper">
+          <img
+            src="images/landing-page/Gallery/1.jpeg"
+            alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+          />
+          <img
+            src="images/landing-page/Gallery/2.jpeg"
+            alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+          />
+          <img
+            src="images/landing-page/Gallery/3.jpeg"
+            alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+          />
+        </div>
+        <a href="pages/gallary.html">VIEW MORE</a>
+      </div>
+    </section>
     <!--testmonial section---->
+    <section class="testmonial-sec">
+      <div class="container">
+        <h1 class="title">Lets see what our client’s say about us</h1>
+        <!-- Slider main container -->
+        <div class="swiper">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+              <div class="flex-wrapper">
+                <div class="left">
+                  <img
+                    src="images/landing-page/carousel/temp-img.png"
+                    alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+                  />
+                </div>
+                <div class="right">
+                  <h1>MR BABU</h1>
+                  <h2>MLA of nemmara</h2>
+                  <p>
+                    Absolutely the best quality brick I have experienced in my
+                    work, thank you Toughie. I would definitely recommend it
+                    because I was thrilled with the result of the project. The
+                    whole construction process went smoothly. Most eco-friendly
+                    product which minimizes labour, water consumption etc. Thank
+                    you again for your assistance with my project. They met my
+                    expectation
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+                <div class="flex-wrapper">
+                  <div class="left">
+                    <img
+                      src="images/landing-page/carousel/temp-img.png"
+                      alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+                    />
+                  </div>
+                  <div class="right">
+                    <h1>MR BABU</h1>
+                    <h2>MLA of nemmara</h2>
+                    <p>
+                      Absolutely the best quality brick I have experienced in my
+                      work, thank you Toughie. I would definitely recommend it
+                      because I was thrilled with the result of the project. The
+                      whole construction process went smoothly. Most eco-friendly
+                      product which minimizes labour, water consumption etc. Thank
+                      you again for your assistance with my project. They met my
+                      expectation
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="flex-wrapper">
+                  <div class="left">
+                    <img
+                      src="images/landing-page/carousel/temp-img.png"
+                      alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+                    />
+                  </div>
+                  <div class="right">
+                    <h1>MR BABU</h1>
+                    <h2>MLA of nemmara</h2>
+                    <p>
+                      Absolutely the best quality brick I have experienced in my
+                      work, thank you Toughie. I would definitely recommend it
+                      because I was thrilled with the result of the project. The
+                      whole construction process went smoothly. Most eco-friendly
+                      product which minimizes labour, water consumption etc. Thank
+                      you again for your assistance with my project. They met my
+                      expectation
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+            
+          </div>
+
+          <!-- If we need navigation buttons -->
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+      </div>
+    </section>
     <!--footer section---->
+    <footer class="footer">
+        <div class="container">
+          <div class="top">
+            <ul class="nav-links">
+              <li><a href="../index.html">HOME</a></li>
+              <li><a href="/pages/about.html">ABOUT</a></li>
+              <li class="active"><a href="/pages/gallary.html">GALLERY</a></li>
+              <li><a href="/pages/contact.html">CONTACT</a></li>
+            </ul>
+            <div class="logo">
+              <a href="../index.html"> RBF </a>
+              <span> enterprise </span>
+            </div>
+            <div class="social-links">
+              <a href="#">
+                <img
+                  src="../images/Footer/email.svg"
+                  alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+                />
+              </a>
+              <a href="#">
+                <img
+                  src="../images/Footer/fb.svg"
+                  alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+                />
+              </a>
+              <a href="#">
+                <img
+                  src="../images/Footer/instagram.svg"
+                  alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+                />
+              </a>
+              <a href="#">
+                <img
+                  src="../images/Footer/whatsapp.svg"
+                  alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+                />
+              </a>
+              <a href="#">
+                <img
+                  src="../images/Footer/yt.svg"
+                  alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+                />
+              </a>
+            </div>
+          </div>
+          <div class="bottom">
+            <div class="wrapper">
+              <div class="card">
+                <img
+                  class="special-image"
+                  src="../images/Footer/bottom/email.svg"
+                  alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+                />
+                <a target="_blank" href="#"> gmail@gmail.com </a>
+              </div>
+              <div class="card">
+                <img
+                  class="special-image"
+                  src="../images/Footer/bottom/location.svg"
+                  alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+                />
+                <a target="_blank" href="https://goo.gl/maps/yMnxC7G6reUnFdjT8">
+                  Chathamangalam , palakkad,kerala
+                </a>
+              </div>
+              <div class="card">
+                <img
+                  src="../images/Footer/bottom/phone.svg"
+                  alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
+                />
+                <a href="tel:9846165549" target="_blank"> +91 9846165549</a>
+                <a href="tel:9846165549" target="_blank"> +91 9846165549</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="js-files/common.js"></script>
-</body>
+  </body>
 </html>
