fix some bugs and broken links

--- a/pages/about.html
+++ b/pages/about.html
@@ -148,25 +148,25 @@
             <span> enterprise </span>
           </div>
           <div class="social-links">
-            <a href="#">
+            <a href="mailto: rbfnemmara@gmail.com" target='_blank'>
               <img
                 src="../images/Footer/email.svg"
                 alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
               />
             </a>
-            <a href="#">
+            <a href="https://www.facebook.com/rbf.interlock" target='_blank'>
               <img
                 src="../images/Footer/fb.svg"
                 alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
               />
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/rbf_enterprise_nemmara" target='_blank'>
               <img
                 src="../images/Footer/instagram.svg"
                 alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
               />
             </a>
-            <a href="#">
+            <a href="https://wa.me/9567746317" target='_blank'>
               <img
                 src="../images/Footer/whatsapp.svg"
                 alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
@@ -188,7 +188,7 @@
                 src="../images/Footer/bottom/email.svg"
                 alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
               />
-              <a target="_blank" href="#"> gmail@gmail.com </a>
+              <a href="mailto: rbfnemmara@gmail.com" target='_blank'>rbfnemmara@gmail.com </a>
             </div>
             <div class="card">
               <img
