--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 of the best and trusted inter blocks manufacturer and Pavers in
                 palakkad kerala since 1920
               </h2>
-              <a href="../pages/gallary.html" class="btn">
+              <a href="pages/contact.html" class="btn">
                 CONTACT US FOR BOOKING
               </a>
             </div>
@@ -268,31 +268,31 @@
               <span> enterprise </span>
             </div>
             <div class="social-links">
-              <a href="#">
+              <a href="mailto: rbfnemmara@gmail.com" target='_blank'>
                 <img
                   src="../images/Footer/email.svg"
                   alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
                 />
               </a>
-              <a href="#">
+              <a href="https://www.facebook.com/rbf.interlock" target='_blank'>
                 <img
                   src="../images/Footer/fb.svg"
                   alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
                 />
               </a>
-              <a href="#">
+              <a href="https://www.instagram.com/rbf_enterprise_nemmara" target='_blank'>
                 <img
                   src="../images/Footer/instagram.svg"
                   alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
                 />
               </a>
-              <a href="#">
+              <a href="https://wa.me/9567746317" target='_blank'>
                 <img
                   src="../images/Footer/whatsapp.svg"
                   alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
                 />
               </a>
-              <a href="#">
+              <a href="#" target='_blank'>
                 <img
                   src="../images/Footer/yt.svg"
                   alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
@@ -308,7 +308,7 @@
                   src="../images/Footer/bottom/email.svg"
                   alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
                 />
-                <a target="_blank" href="#"> gmail@gmail.com </a>
+                <a href="mailto: rbfnemmara@gmail.com" target='_blank'>rbfnemmara@gmail.com </a>
               </div>
               <div class="card">
                 <img
