--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               <div class="flex-wrapper">
                 <div class="left">
                   <img
-                    src="images/landing-page/carousel/temp-img.png"
+                    src="images/landing-page/carousel/babu.jpg"
                     alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
                   />
                 </div>
@@ -200,13 +200,13 @@
                 <div class="flex-wrapper">
                   <div class="left">
                     <img
-                      src="images/landing-page/carousel/temp-img.png"
+                      src="images/landing-page/carousel/preman.jpg"
                       alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
                     />
                   </div>
                   <div class="right">
-                    <h1>MR BABU</h1>
-                    <h2>MLA of nemmara</h2>
+                    <h1>MR Preman</h1>
+                    <h2>Ex Presedient of nemmara panchayat</h2>
                     <p>
                       Absolutely the best quality brick I have experienced in my
                       work, thank you Toughie. I would definitely recommend it
@@ -229,8 +229,8 @@
                     />
                   </div>
                   <div class="right">
-                    <h1>MR BABU</h1>
-                    <h2>MLA of nemmara</h2>
+                    <h1>MR Radhakrishnan</h1>
+                    <h2>Manager of rbf enterprise</h2>
                     <p>
                       Absolutely the best quality brick I have experienced in my
                       work, thank you Toughie. I would definitely recommend it
