--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <div class="flex-wrapper">
                   <div class="left">
                     <img
-                      src="images/landing-page/carousel/temp-img.png"
+                      src="images/landing-page/carousel/radha.jpeg"
                       alt="image of our rbf palakkad kerala number one and best interblocks and tiles manfacturing and pavers company"
                     />
                   </div>
