--- a/pages/about.html
+++ b/pages/about.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RBF - Palakkad and kerala best interblocks company</title>
+    <meta name="description" content="Best and trusted inter-blocks and pavers company in palakkad kerala India">
+    <meta name="keywords" content="interblocks , pavers , kerala , India , palakkad , nemmara , bestinpalkakad , company">
     <link rel="stylesheet" href="../styles/about-styles/about.css" />
   </head>
   <body>
